# CS752_Proj

./: .gitignore  README.md
benchmarks/: analysis.py  gem5_bench.sh  gem5_daxpy.sh  gem5_libquantum.sh  gem5_mempinch1.sh  gem5_povray.sh  gem5_sjeng.sh
benchmarks/condor/: build-gem5.sh  build-gem5.sub  build-m5.sh  build-m5.sub  run-benchmark.sh  run-benchmark.sub  run-daxpy.sh  run-daxpy.sub  sim-config-2.py  sim-config-3.py  sim-config.py  test_list.txt
benchmarks/config/: HW3CPU.py  caches.py  sim-config-2.py  sim-config-3.py  sim-config.py
benchmarks/run_scripts/: run_daxpy.sh  run_mempinch1.sh  run_povray.sh  run_sjeng.sh
benchmarks/src/: CMakeLists.txt
benchmarks/src/453.povray/src/: CMakeLists.txt  Makefile.old  bbox.cpp  bsphere.cpp  media.cpp  messageoutput.cpp  povmslng.h  sphsweep.cpp  super.cpp
benchmarks/src/458.sjeng/src/: CMakeLists.txt
benchmarks/src/462.libquantum/src/: CMakeLists.txt
benchmarks/src/MembranePinch1/: CMakeLists.txt  main.cpp
benchmarks/src/daxpy/: CMakeLists.txt  daxpy.cpp
reports/final/: final_report.tex  ref_final.bib
reports/progress/: progress.tex  ref_progress.bib
reports/proposal/: proposal.tex  ref_proposal.bib
